[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-pulse"
version = "0.2.0"
authors = [
  { name="Parham Davari", email="parham.davarii@gmail.com" },
]
description = "Check your FastAPI's pulse with one line of code. Instant health monitoring and dashboard."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi",
    "tdigest>=0.5.2",
    "httpx>=0.23.0",  # Required for both testing and CLI
]

[project.urls]
"Homepage" = "https://github.com/parhamdavari/fastapi-pulse"
"Bug Tracker" = "https://github.com/parhamdavari/fastapi-pulse/issues"

[project.scripts]
pulse-cli = "fastapi_pulse.cli:main"

[project.optional-dependencies]
cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",      # For measuring coverage
    "pytest-asyncio>=0.21.0", # For handling async test functions
    "pytest-mock>=3.10.0",    # For mocking in tests
    "pytest-xdist>=3.0.0",    # For parallel test execution
    "httpx>=0.23.0",          # The modern async HTTP client for testing
    "asgi-lifespan>=2.0.0",   # For managing ASGI app lifecycle in tests
    "hypothesis>=6.70.0",     # For property-based testing
    "freezegun>=1.2.0",       # For mocking time in tests
    "numpy>=1.20.0",          # For calculating trusted percentile values in tests
]
dev = [
    "uvicorn",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests with no external dependencies",
    "integration: Integration tests with real FastAPI app",
    "api: API endpoint tests",
    "property: Property-based tests with Hypothesis",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.hypothesis]
derandomize = true
max_examples = 100
verbosity = "normal"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["fastapi_pulse"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
